--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     position: relative;
     overflow: hidden;
     background-color: aqua;
+    background-image: url('pexels-samkolder-2387877.jpg'); 
+    background-size: cover;
+    background-position: center; 
 }
 
 #robot {
@@ -38,4 +41,16 @@
     width: 5px; 
     height: 15px;
     background-color: red; 
+}
+.scoreboard {
+    position: absolute;
+    top: 10px; 
+    left: 10px; 
+    padding: 10px;
+    background-color: blanchedalmond;
+    border-radius: 5px;
+    border: 1px solid darkorange;
+    z-index: 10; 
+    font-size: 18px; 
+    font-weight: bold; 
 }
